--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
             <p class="logo-text-slash"> / </p>
             <p class="logo-text">Heroku</p>
         </div>
+
         <div class="logo-heroku">
             <div class="logo-heroku-up">
-                <div class="logo-heroku-up-left">
+             <div class="logo-img-logo">   
             <img class="img-heroku"
                 src="./img/logoIkon.svg" alt="">
+                <div class="logo-heroku-up-left">
             <div class="link-selekt-products">
                 <a class="link-products" href="">Products</a>
                 <select name="Products" id=""></select>
@@ -42,19 +44,23 @@
             </div>
             <div class="link-selest-more">
                 <a class="link-more" href="">More</a>
-                <select name="More" id=""></select>
+                <select name="More" id="more-color"></select>
             </div>
             </div>
+        </div>
             <div class="search-elements">
+            <div class="search-elements-txt-btn">
               <p class="search-elements-text">Search Elements</p>
-              <button class="search-elements-btn">
-                <img class="search-elements-btn-img" src="./img/Button.svg" alt="">
+              <button class="search-elements-btn" type="submit">
+                <img class="img-btn" src="./img/Button.svg" alt="">
               </button>
-              <div>
+              </div>
+              <div class="login-elements">
               <a class="login-elements-btn" href="">Log in</a>
+              <p class="search-elements-or">or</p>
             </div>
-            <div>
-            <p class="search-elements-or">or</p>
+            <div class="search-or">
+            
             <button class="sign-elements">Sign up</button>
             </div>
         </div>
